# capstone

./: CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake
src/: controller.cpp  controller.h  extra_life.h  game.cpp  game.h  livesManager.cpp  livesManager.h  main.cpp  power_up.h  renderer.cpp  renderer.h  score_manager.cpp  score_manager.h  slow_down.h  snake.cpp  snake.h  speed_booster.h  state_manager.cpp  state_manager.h  utils.h
